# data-science-ml-portfolio

Customer-Support-Chatbot/: .env.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Tutorial-102.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
Customer-Support-Chatbot/configs/: __init__.py  logging_config.py  settings.py
Customer-Support-Chatbot/data/sample_docs/: README.md  faq.md
Customer-Support-Chatbot/migrations/: env.py
Customer-Support-Chatbot/migrations/versions/: 001_initial.py
Customer-Support-Chatbot/monitoring/: prometheus.yml
Customer-Support-Chatbot/notebooks/: 01_document_exploration.ipynb  02_evaluation_analysis.ipynb
Customer-Support-Chatbot/scripts/: build_index.py  evaluate_pipeline.py  finetune_adapter.py  ingest_documents.py
Customer-Support-Chatbot/src/: __init__.py
Customer-Support-Chatbot/src/api/: auth.py  errors.py  main.py  middleware.py  rate_limiter.py  schemas.py
Customer-Support-Chatbot/src/database/: connection.py
Customer-Support-Chatbot/src/evaluation/: __init__.py  benchmarks.py  evaluator.py  metrics.py
Customer-Support-Chatbot/src/generation/: __init__.py  llm_client.py  prompt_engine.py  raft.py
Customer-Support-Chatbot/src/indexing/: __init__.py  embeddings.py  hybrid_index.py  keyword_index.py  vector_store.py
Customer-Support-Chatbot/src/monitoring/: metrics.py  tracing.py
Customer-Support-Chatbot/src/parsing/: __init__.py  chunking.py  document_parser.py  preprocessor.py
Customer-Support-Chatbot/src/pipeline/: __init__.py  conversation.py  rag_pipeline.py
(+59 files in other folders)
